# yax86

./: .clang-format  .gitignore  CMakeLists.txt  GEMINI.md  Makefile  all.c  bios.h  bios_sdl.h  compile_commands.json  cpu.c  cpu.h  dma.h  fdc.h  keyboard.h  pic.h  pit.h  platform.h  ppi.h  util.h  video.h  yax86.c  yax86.h
.github/workflows/: build.yaml
core/: CMakeLists.txt  bios.h  cpu.h  dma.h  fdc.h  keyboard.h  pic.h  platform.h  ppi.h  yax86_core.c  yax86_core.h
core/src/bios/: public.h
core/src/cpu/: cpu.c  instructions_add.c  instructions_bcd_ascii.c  instructions_bool.c  instructions_ctrl_flow.c  instructions_flags.c  instructions_group_2.c  instructions_group_3.c  instructions_group_4.c  instructions_group_5.c  instructions_helpers.c  instructions_lea.c  instructions_mov.c  instructions_string.c  instructions_sub.c  opcode_table.c  operands.c  public.h
core/src/dma/: public.h
core/src/fdc/: bundle.json  public.h
core/src/keyboard/: bundle.json  keyboard.c
core/src/pic/: bundle.json  pic.c
core/src/platform/: platform.c  public.h
core/src/ppi/: bundle.json  ppi.c
core/src/util/: common.h  snprintf.h  static_vector.h
core/src/video/: fonts.c
core/tests/: CMakeLists.txt
core/tests/bios/: CMakeLists.txt  bios_test_helper.cpp
core/tests/bios/testdata/: mda_test_intense-golden.ppm  mda_test_underline-golden.ppm
core/tests/cpu/: CMakeLists.txt  add_sub_test.cpp  and_or_xor_test.cpp  bcd_test.cpp  cmp_jmp_test.cpp  cpu_demo_test.sh  fetch_next_instruction_test.cpp  group_1_test.cpp  group_2_part_1_test.cpp  group_2_part_2_test.cpp  group_3_test.cpp  group_5_test.cpp  lea_les_lds_test.cpp  loop_test.cpp  mov_xchg_xlat_test.cpp  push_pop_test.cpp  string_rep_cmp_test.cpp  string_rep_test.cpp  test_helpers.cpp
core/tests/dma/: CMakeLists.txt  dma_test_helper.h
core/tests/fdc/: CMakeLists.txt
core/tests/keyboard/: CMakeLists.txt
core/tests/pic/: CMakeLists.txt  init_test.cpp  ocw_test.cpp
core/tests/pit/: CMakeLists.txt
core/tests/platform/: CMakeLists.txt
core/tests/ppi/: CMakeLists.txt  keyboard_control_test.cpp
core/tests/util/: CMakeLists.txt  snprintf_test.cpp
core/tests/video/: CMakeLists.txt
core/tools/: generate-bios-rom-data-files.js
core/tools/cpu_demo/: CMakeLists.txt  cpu_demo.cpp  hello.asm
demos/cpu/: CMakeLists.txt  cal.asm  cpu_demo.cpp  horoscope.asm
libyax86/: CMakeLists.txt  bios.h  platform.h
libyax86/src/bios/: bundle.json
libyax86/src/cpu/: instructions_add.c  instructions_cmp.c  instructions_flags.c  instructions_group_1.c  instructions_group_4.c  instructions_sign_ext.c  instructions_stack.c  instructions_string.c  operands.h  types.h
libyax86/src/keyboard/: public.h
libyax86/src/pic/: public.h
libyax86/src/platform/: public.h
libyax86/src/ppi/: public.h
libyax86/tests/cpu/: CMakeLists.txt  and_or_xor_test.cpp  cmp_jmp_test.cpp  cpu_demo_test.sh  group_2_part_2_test.cpp  group_4_test.cpp
libyax86/tests/pic/: CMakeLists.txt  irq_test.cpp
sdl/: CMakeLists.txt
sdl/src/: display.c  display.h  input.c  input.h  main.c
src/: common.h
src/bios/: bda.c  bios.c  bios_rom_data.c  bios_rom_data.h  bundle.json  display_text.c  display_text.h  display_text_mode.c  fonts.c  fonts.h  interrupt_05.c  interrupt_10.c  interrupts.c  interrupts.h  memory.c  public.h  video.c  video.h
src/bios_sdl/: bundle.json  public.h
src/cpu/: bundle.json  cpu.c  cpu_private.h  cpu_public.h  instructions.h  instructions_add.c  instructions_bcd_ascii.c  instructions_bool.c  instructions_cmp.c  instructions_ctrl_flow.c  instructions_flags.c  instructions_group_1.c  instructions_group_2.c  instructions_group_3.c  instructions_group_4.c  instructions_group_5.c  instructions_helpers.c  instructions_io.c  instructions_lea.c  instructions_mov.c  instructions_sign_ext.c  instructions_stack.c  instructions_string.c  instructions_sub.c  opcode_table.c  operands.c  operands.h  public.h  utils.c  utils.h  widths.h
src/dma/: bundle.json  dma.c  public.h
src/fdc/: bundle.json  fdc.c  public.h
src/keyboard/: keyboard.c
src/pic/: pic.c  public.h
src/pit/: bundle.json  pit.c  public.h
src/platform/: bundle.json  platform.c  public.h
src/ppi/: ppi.c  public.h
src/util/: bundle.json  common.h  static_vector.h
src/video/: bundle.json  fonts.h  mda.c  public.h
tests/: CMakeLists.txt  Makefile  add_sub_test.cpp  and_or_xor_test.cpp  bcd_test.cpp  call_ret_test.cpp  cmp_jmp_test.cpp  cmp_jump_test.cpp  cpu_demo_test.sh  execute_instruction_test.cpp  fetch_next_instruction_test.cpp  flags_test.cpp  group_1_test.cpp  group_2_part_1_test.cpp  group_2_part_2_test.cpp  group_2_test.cpp  group_3_test.cpp  group_4_test.cpp  group_5_test.cpp  lea_les_lds_test.cpp  loop_test.cpp  mov_test.cpp  mov_xchg_lea_test.cpp  mov_xchg_test.cpp  mov_xchg_xlat_test.cpp  opcode_table_test.cpp  push_pop_flags_test.cpp  push_pop_test.cpp  string_rep_cmp_test.cpp  string_rep_test.cpp  test_helpers.cpp  test_helpers.h
tests/bios/: CMakeLists.txt  bios_test_helper.cpp  bios_test_helper.h  interrupt_10_test.cpp  mda_test.cpp  video_test_helper.cpp  video_test_helper.h
tests/bios/testdata/: mda_test_hello-golden.ppm  mda_test_intense-golden.ppm  mda_test_reverse-golden.ppm
tests/cpu/: CMakeLists.txt  add_sub_test.cpp  bcd_test.cpp  call_ret_test.cpp  cpu_demo_test.sh  fetch_next_instruction_test.cpp  flags_test.cpp  group_2_part_1_test.cpp  lea_les_lds_test.cpp  loop_test.cpp  mov_xchg_xlat_test.cpp  opcode_table_test.cpp  string_rep_test.cpp  test_helpers.cpp  test_helpers.h
tests/dma/: transfer_test.cpp
tests/fdc/: fdc_test.cpp
tests/keyboard/: CMakeLists.txt  keyboard_test.cpp
tests/pic/: irq_test.cpp
tests/pit/: mode_3_test.cpp
tests/platform/: CMakeLists.txt
tests/ppi/: keyboard_control_test.cpp  pc_speaker_test.cpp  port_c_test.cpp
tests/testdata/: Makefile  hello-world.asm  mov-test.asm
tests/video/: CMakeLists.txt
tools/: build.sh  download-reference-projects.sh  generate-bios-rom-data-file.js  generate-header-bundle.js  install-sdl3.sh  run-tests.sh  tmux-session.sh
tools/cpu_demo/: cpu_demo.cpp
(+14 files in other folders)
